Fixes coverflow marquee swiper

--- a/styles/marquee-swiper.css
+++ b/styles/marquee-swiper.css
@@ -19,7 +19,11 @@ body{
 .swiper-slide:last-of-type{
   margin-right: calc(-1 * var(--gap));
 } */
-
+.swiper-slide {
+  overflow: hidden !important;
+  border-radius: 0.5em;
+}
+/* 
 .swiper-slide.is-active {
   transition: transform 0.6s cubic-bezier(0.625, 0.05, 0, 1);
   transform: scale(1.2);
@@ -37,4 +41,4 @@ body{
 .wf-design-mode .swiper {
 	overflow-x: scroll !important;
   overflow-y: hidden;
-}
+} */
